# sc2ir

./: Cargo.toml  README.md
docs/: architecture.md  coding_standards.md  contributing.md  conversion_process.puml  data_model.puml  extending.md  high_level_architecture.puml  manifesto.md  trait_structure.puml  usage.md  visualizing_diagrams.md
src/: lib.rs
src/conversions/: ir.rs  larvie.rs  mod.rs
src/eg/: README.md  sc.sc
src/extensions/: casts.rs  flora.rs  instinct.rs  mod.rs
src/traits/: mod.rs
